@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-17T01:16:04Z",
+  "timestamp" : "2022-05-17T08:21:20Z",
   "count_outdated" : 218,
   "uniques_outdated" : 143,
-  "count" : 271,
-  "uniques" : 175,
+  "count" : 272,
+  "uniques" : 176,
   "clones" : [
     {
       "timestamp": "2022-05-03T00:00:00Z",
@@ -95,6 +95,13 @@
       "count_minmax": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2022-05-17T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
