@@ -1,5 +1,5 @@
 {
-  "count": 53,
+  "count": 54,
   "uniques": 14,
   "clones": [
     {
@@ -65,6 +65,11 @@
     {
       "timestamp": "2022-05-16T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-05-17T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
